--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -5,3 +5,10 @@
   color: white;
   border-radius: 10px;
 }
+
+.container {
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+}
